examples/test/testpolicy10976.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10976
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key15: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value14
          key14: value41
      podSelector:
        matchLabels:
          key10: value27
          key47: value12
          key43: value25
